Fixed button text wrapping.

--- a/_assets/css/app.scss
+++ b/_assets/css/app.scss
@@ -133,3 +133,7 @@ body {
     }
   }
 }
+
+.btn {
+  white-space: normal;
+}
